alpha_fold_query: some small improvements

--- a/example/templates/rg_script.lmp.jinja
+++ b/example/templates/rg_script.lmp.jinja
@@ -29,7 +29,7 @@ bond_coeff          1     9.600     3.81
 #bond_coeff          2     9.600     5.0
 pair_coeff * * wf/cut 0.0 0.0 1 1 0.0
 ### Epsilon scaling
-### Globular-globular 0.7; globular-IDP sqrt(0.7) and IDP-IDP 1
+### Globular-globular 0.7; globular-IDP skih and IDP-IDP 1
 pair_coeff	1	1	wf/cut	0.07389	6.46795	1	4	19.40385
 pair_coeff	1	2	wf/cut	0.12343	5.58153	1	3	16.74459
 pair_coeff	1	3	wf/cut	0.07057	6.56964	1	4	19.70893
